nalunit_fns.h


extern int build_nal_unit_context(ES_p                es,
                                  nal_unit_context_p *context);
extern void free_nal_unit_context(nal_unit_context_p *context);
extern int rewind_nal_unit_context(nal_unit_context_p  context);
extern void free_nal_unit(nal_unit_p  *nal);
extern int find_next_NAL_unit(nal_unit_context_p  context,
                              int                 verbose,
                              nal_unit_p         *nal);
extern int nal_is_slice(nal_unit_p  nal);
extern int nal_is_pic_param_set(nal_unit_p  nal);
extern int nal_is_seq_param_set(nal_unit_p  nal);
extern int nal_is_redundant(nal_unit_p  nal);
extern int nal_is_first_VCL_NAL(nal_unit_p   nal,
                                nal_unit_p   last);
extern int build_nal_unit_list(nal_unit_list_p  *list);
extern int append_to_nal_unit_list(nal_unit_list_p  list,
                                   nal_unit_p       nal);
extern void reset_nal_unit_list(nal_unit_list_p  list,
                                int              deep);
extern void free_nal_unit_list(nal_unit_list_p  *list,
                               int               deep);