es_fns.h


extern int open_elementary_stream(char  *filename,
                                  ES_p  *es);
extern int build_elementary_stream_file(int    input,
                                        ES_p  *es);
extern void free_elementary_stream(ES_p  *es);
extern void close_elementary_stream(ES_p  *es);
extern int build_ES_unit_from_data(ES_unit_p  *unit,
                                   byte       *data,
                                   u_int32     data_len);
extern void free_ES_unit(ES_unit_p  *unit);
extern void report_ES_unit(FILE      *stream,
                           ES_unit_p  unit);
extern int find_and_build_next_ES_unit(ES_p        es,
                                       ES_unit_p  *unit);
extern int write_ES_unit(FILE      *output,
                         ES_unit_p  unit);
extern int seek_ES(ES_p       es,
                   ES_offset  where);
extern int compare_ES_offsets(ES_offset  offset1,
                              ES_offset  offset2);