accessunit_fns.h


extern int build_access_unit_context(ES_p                   es,
                                     access_unit_context_p *context);
extern void free_access_unit_context(access_unit_context_p *context);
extern int rewind_access_unit_context(access_unit_context_p  context);
extern void free_access_unit(access_unit_p  *acc_unit);
extern int get_access_unit_bounds(access_unit_p   access_unit,
                                  ES_offset      *start,
                                  u_int32        *length);
extern int all_slices_I(access_unit_p  access_unit);
extern int all_slices_P(access_unit_p  access_unit);
extern int all_slices_I_or_P(access_unit_p  access_unit);
extern int all_slices_B(access_unit_p  access_unit);
extern int get_next_access_unit(access_unit_context_p context,
                                int                   quiet,
                                int                   show_details,
                                access_unit_p        *ret_access_unit);
extern int get_next_h264_frame(access_unit_context_p context,
                               int                   quiet,
                               int                   show_details,
                               access_unit_p        *frame);
extern int access_unit_has_PTS(access_unit_p access_unit);